--- a/topics/user-profile.yaml
+++ b/topics/user-profile.yaml
@@ -16,7 +16,7 @@ metadata:
     retention-policy: "compact-with-delete"
 spec:
   partitions: 6
-  replicas: 3
+  replicas: 1
   config:
     # Retention settings for compacted topic
     retention.ms: -1 # Unlimited time retention (compaction-based)
@@ -38,25 +38,17 @@ spec:
     max.message.bytes: 1048576 # 1MB max message size for profile data
 
     # Replication and durability
-    min.insync.replicas: 2 # Require at least 2 replicas for writes
-    unclean.leader.election.enable: false # Prevent data loss
+    min.insync.replicas: 1 # Single-broker kind cluster
 
     # Index settings for efficient key-based lookups
     index.interval.bytes: 4096 # Index every 4KB
     max.index.bytes: 10485760 # 10MB max index size
 
-    # Consumer and producer settings
-    message.timestamp.type: "LogAppendTime" # Use server time for timestamps
-    message.timestamp.difference.max.ms: 9223372036854775807 # No limit on timestamp difference
+    # Timestamp settings
+    message.timestamp.type: "LogAppendTime"
 
-    # Throttling to prevent overwhelming consumers
-    produce.request.timeout.ms: 30000 # 30 second timeout for produces
-    fetch.max.bytes: 52428800 # 50MB max fetch size for batch processing
+    # Remove client-only throttling configs
 
-    # Additional settings for profile data patterns
-    enable.auto.commit: false # Manual commit for better control
-    auto.offset.reset: "earliest" # Start from beginning for new consumers
+    # Remove consumer-only settings
 
     # Monitoring and observability
-    log.message.format.version: "3.5" # Use latest message format
-    log.message.timestamp.type: "LogAppendTime"
